Fixed underline, no style in html

--- a/bakfiets.html
+++ b/bakfiets.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </nav>
-    <header class="small-header" style="background-image: url('images/bakfiets_bikes.jpg')">
+    <header class="small-header" id="bakfiets">
         <div class="wrapper">
             <div class="text">
                 <h2>Bakfiets</h2>
