--- a/elektrischefiets.html
+++ b/elektrischefiets.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </nav>
-    <header class="small-header" style="background-image: url('images/elektrischefiets_bikes.jpg')">
+    <header class="small-header" id="elektrischefiets">
         <div class="wrapper">
             <div class="text">
                 <h2>Elektrischefiets</h2>
