--- a/omafiets.html
+++ b/omafiets.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </nav>
-    <header class="small-header" style="background-image: url('images/omafiets_bikes.jpg')">
+    <header class="small-header" id="omafiets">
         <div class="wrapper">
             <div class="text">
                 <h2>Omafiets</h2>
