--- a/mountainbike.html
+++ b/mountainbike.html
@@ -40,7 +40,7 @@
             </div>
         </div>
     </nav>
-    <header class="small-header" style="background-image: url('images/mountainbike_bikes.jpg')">
+    <header class="small-header" id="mountainbike">
         <div class="wrapper">
             <div class="text">
                 <h2>Mountainbike</h2>
