Fixed footer links and changed 'voorwaarden' to 'gallerij'

--- a/about.html
+++ b/about.html
@@ -170,13 +170,13 @@
                     <h2>Wellicht handig</h2>
                     <ul>
                         <li>
-                            <a href="/about.html">Over ons</a>
+                            <a href="about.html">Over ons</a>
                         </li>
                         <li>
-                            <a href="/contact.html">Contact</a>
+                            <a href="contact.html">Contact</a>
                         </li>
                         <li>
-                            <a href="">Voorwaarden</a>
+                            <a href="gallery.html">Gallerij</a>
                         </li>
                     </ul>
                 </div>
@@ -202,10 +202,10 @@
                     <h2>Bekijk ook eens</h2>
                     <ul>
                         <li>
-                            <a href="/omafiets.html">Oma fietsen</a>
+                            <a href="omafiets.html">Oma fietsen</a>
                         </li>
                         <li>
-                            <a href="/mountainbike.html">Mountainbikes</a>
+                            <a href="mountainbike.html">Mountainbikes</a>
                         </li>
                     </ul>
                 </div>
