--- a/mountainbike.html
+++ b/mountainbike.html
@@ -173,9 +173,9 @@
                     <div class="column outside">
                         <h2>Wellicht handig</h2>
                         <ul>
-                            <li><a href="/about.html">Over ons</a> </li>
-                            <li><a href="/contact.html">Contact</a></li>
-                            <li><a href="">Voorwaarden</a></li>
+                            <li><a href="about.html">Over ons</a> </li>
+                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="gallery.html">Gallerij</a></li>
                         </ul>
                     </div>
                     <div class="column follow">
@@ -199,8 +199,8 @@
                     <div class="column outside">
                         <h2>Bekijk ook eens</h2>
                         <ul>
-                            <li><a href="/omafiets.html">Oma fietsen</a></li>
-                            <li><a href="/mountainbike.html">Mountainbikes</a></li>
+                            <li><a href="omafiets.html">Oma fietsen</a></li>
+                            <li><a href="mountainbike.html">Mountainbikes</a></li>
                         </ul>
                     </div>
                 </div>
