--- a/bakfiets.html
+++ b/bakfiets.html
@@ -173,9 +173,9 @@
                     <div class="column outside">
                         <h2>Wellicht handig</h2>
                         <ul>
-                            <li><a href="/about.html">Over ons</a> </li>
-                            <li><a href="/contact.html">Contact</a></li>
-                            <li><a href="">Voorwaarden</a></li>
+                            <li><a href="about.html">Over ons</a> </li>
+                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="gallery.html">Gallerij</a></li>
                         </ul>
                     </div>
                     <div class="column follow">
